minor fixes to part2/3

--- a/lab2/class-assignment/lab2-class-part2.ipynb
+++ b/lab2/class-assignment/lab2-class-part2.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "### Section 2.1: Accessing word senses in WordNet\n",
     "---\n",
-    "To use WordNet in Python we need to import it. The idiomatic way of doing this is abbreviating 'wordnet' to 'wn' using the `as`-command. This is done simply for convenience. We can now access the contents of WordNet by using dot-notation (`wn.some_function()`). Note that even though we are using the dot-notation, what we import here is *not* a `wordnet` object, but a module of functions, classes and so on."
+    "To use WordNet in Python we need to import it. The idiomatic way of doing this is abbreviating `wordnet` to `wn` using the `as`-command. This is done simply for convenience. We can now access the contents of WordNet by using dot-notation (`wn.some_function()`). Note that even though we are using the dot-notation, what we import here is *not* a `wordnet` object, but a module of functions, classes and so on."
    ]
   },
   {
@@ -83,7 +83,7 @@
    "source": [
     "---\n",
     "\n",
-    "**Ex 2.1.1** Write a `for`-loop that iterates through the Synsets returned by the `wn.synsets`-function for a word of your choice. For each sense, print out the name and the definition of the sense.\n",
+    "**Ex 2.1.1** Write a `for`-loop that iterates through the synsets returned by the `wn.synsets`-function for a word of your choice. For each sense, print out the name and the definition of the sense.\n",
     "\n",
     "---"
    ]
@@ -270,11 +270,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Move on to part 3 when you feel ready."
+   ]
   }
  ],
  "metadata": {
