--- a/lab2/class-assignment/lab2-class-part3.ipynb
+++ b/lab2/class-assignment/lab2-class-part3.ipynb
@@ -28,7 +28,10 @@
    "source": [
     "### Section 3.1: The Lesk algorithm\n",
     "---\n",
-    "We now have all the necessary building blocks for the actual algorithm. Here is a pseudocode/plain text representation for running Simplified Lesk on a single word:\n",
+    "\n",
+    "If you need a refresher on the Lesk algorithm, you can find a description in the lecture slides.\n",
+    "\n",
+    "Here is a pseudocode/plain text representation for running Simplified Lesk on a single word:\n",
     "\n",
     "```\n",
     "target = target word for disambiguation                                  (1)\n",
@@ -51,7 +54,7 @@
     "\n",
     "---\n",
     "\n",
-    "**Step 1.** In the first two lines of our pseudocode we initialize the target word we want to disambiguate as well as the context we will use. Your first task is to initialize these two things. Use the sentence \"*time flies like an arrow*\" and disambiguate the word \"*time*\". In the code cell below, initialize a variable `target` to contain the string \"time\". Also initialize a variable `context` that contains the context words as a Python set. You can find examples of how to do this in the review section.\n",
+    "**Step 1.** In the first two lines of our pseudocode we initialize the target word we want to disambiguate as well as the context we will use. Your first task is to values to these two variables. Use the sentence \"*time flies like an arrow*\" and disambiguate the word \"*time*\". In the code cell below, assign to the variable `target` the string \"time\". Also assign to the variable `context`  the context words as a Python set. You can find examples of how to do this in the review section of Part 1.\n",
     "\n",
     "\n",
     "**Step 2.** The next step in the algorithm is to go through all the senses of the target word. Remember, you can access all the senses (synsets) of the word with `wn.synsets(word)`. The function returns a list containing all the synset objects. The`for`-loop for iterating through the senses is already given. To make sure you got this right, you can print out the synset objects. The output should look something like this:\n",
@@ -153,16 +156,14 @@
     "\n",
     "This section contains more advanced material. You do not need to complete this section to understand the homework. Feel free to try out the exercises but don't worry if they seem very difficult.\n",
     "\n",
-    "Above we have an implementation of the Lesk-algorithm, but it is realitively cumbersome to use. You can only disambiguate one word in one context at a time. Whenever you change the target and context, you lose the previous results. Let's wrap the algorithm into a nicer form so that we can use it in more interesting ways.\n",
+    "Above we have an implementation of the Lesk-algorithm, but it is relatively cumbersome to use. You can only disambiguate one word in one context at a time. Whenever you change the target and context, you lose the previous results. Let's wrap the algorithm into a nicer form so that we can use it in more interesting ways.\n",
     "\n",
     "\n",
     "Probably the first thing we want to do is to wrap the code above into a single function. Let's call this function `disambiguate_word`. The function should take in a target word and the context words as arguments, and return the (correct) sense for the word. \n",
     "\n",
     "---\n",
     "\n",
-    "**Ex 3.2.1**\n",
-    "\n",
-    "Wrap the implementation above into a function `disambiguate_word`. This should be relatively straight-forward. Copy everything except the `target`, `sentence`, and `context` variables into a function definition, and add a `return` statement where you return the best synset for the word.\n",
+    "**Ex 3.2.1** Wrap the implementation above into a function `disambiguate_word`. This should be relatively straight-forward. Copy everything except the `target`, `sentence`, and `context` variables into a function definition, and add a `return` statement where you return the best synset for the word.\n",
     "\n",
     "---"
    ]
@@ -203,9 +204,7 @@
     "\n",
     "---\n",
     "\n",
-    "**Ex 3.2.2**\n",
-    "\n",
-    "Implement a function `disambiguate_sentence` that takes in a sentence as string as an argument and returns a list of synset object containing all the words disambiguated. Whatever you did in the code cell above, going through the sentence with a for-loop and so on, should be done inside the function. \n",
+    "**Ex 3.2.2** Implement a function `disambiguate_sentence` that takes in a sentence as string as an argument and returns a list of synset object containing all the words disambiguated. Whatever you did in the code cell above, going through the sentence with a for-loop and so on, should be done inside the function. \n",
     "\n",
     "Because you want to return multiple synsets, you need to gather them somehow into a list. This can be done using the `append`-method of Python lists. You can initialize an empty list and append the best sense for each word like this:\n",
     "\n",
