Type hyponym -> hypernym

--- a/lab2/class-assignment/lab2-class-part2.ipynb
+++ b/lab2/class-assignment/lab2-class-part2.ipynb
@@ -237,7 +237,7 @@
     "    hypernyms = None\n",
     "    first_hypernym = None\n",
     "    \n",
-    "    # Step 4. Retrieve the first lemma name of the hyponym\n",
+    "    # Step 4. Retrieve the first lemma name of the hypernym\n",
     "    lemma_names = None\n",
     "    first_lemma = None\n",
     "    \n",
