--- a/lab1/class-assignment/lab1-class-part2.ipynb
+++ b/lab1/class-assignment/lab1-class-part2.ipynb
@@ -838,7 +838,7 @@
    "source": [
     "#### 4.1 Indexing\n",
     "\n",
-    "Above we see an example of indexing, accessing a specific element of a list. A thing to keep in mind with Python is that indexing starts at **0**. Here is an illustration of the indexes of a list:\n",
+    "Above we see an example of indexing, accessing a specific element of a list. A thing to keep in mind with Python is that indexing starts at **0**. Here is an illustration of the indices of a list:\n",
     "\n",
     "    [\"Play\", \"it\", \"once\", \"Sam\"]\n",
     "       0      1      2       3\n",
