--- a/lab3/class-assignment/lab3-class-part2.ipynb
+++ b/lab3/class-assignment/lab3-class-part2.ipynb
@@ -160,7 +160,7 @@
     "\n",
     "**Ex 1.2.1** In the code cell below, analyze and visualize the embeddings for some words of you choice. Try to see if you can find patters in the output: Which word pairs/groups seem to work well and which don't? \n",
     "\n",
-    "Use a reasonable amount of words (for example 6 or more).\n",
+    "Use a reasonable number of words (for example 6 or more).\n",
     "\n",
     "All words should be lowercase. If you use the `split` method as above, the words need to be separated by whitespace. You can try out visualizing in 2D and 3D, with and without arrows, depending on which one you like.\n",
     "\n",
