--- a/lab3-under-construction/home-assignment/lab3-home.ipynb
+++ b/lab3-under-construction/home-assignment/lab3-home.ipynb
@@ -18,6 +18,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
+    "import numpy as np\n",
     "sys.path.append(\"../../src\")\n",
     "import distribsem\n",
     "\n",
