fix a ton of typos, remove sys path appends

--- a/lab3-under-construction/class-assignment/lab3-class-part1.ipynb
+++ b/lab3-under-construction/class-assignment/lab3-class-part1.ipynb
@@ -25,8 +25,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append(\"../../src\")\n",
     "import plot_utils\n",
     "\n",
     "%matplotlib notebook"
@@ -40,7 +38,7 @@
     "\n",
     "---\n",
     "\n",
-    "Below you can see an example of semantic feature analysis (from slide 9).\n",
+    "In the code cell below you can see an example of semantic feature analysis (from slide 9).\n",
     "\n",
     "The dictionary `features` contains the names of the features we want to use, linked to their respective axes *x*, *y*, and *z*. The feature names are only used for visualization.\n",
     "\n",
@@ -136,7 +134,7 @@
     "\n",
     "*If you are interested, you can read more about PCA [in this visual explanation](http://setosa.io/ev/principal-component-analysis/) or in [Wikipedia](https://en.wikipedia.org/wiki/Principal_component_analysis). This is completely optional and beyond the scope of this course. Especially the Wikipedia article requires substantial mathematical knowledge.*\n",
     "\n",
-    "Because the dimensionality of the original vectors is high and we need to perform PCA on them, the final 2 or 3 dimensions do not necessarily correlate to any of our original features. Because of this, we cannot name the axes in the figures anymore, and so the function we use in this section doesn't require the `features` dictionary as an argument. \n",
+    "Because the dimensionality of the original vectors is high, and we need to perform PCA on them, the resulting 2 or 3 dimensions do not necessarily correspond to any of our original features. Because of this, we cannot name the axes in the figures anymore, and so the function we use in this section doesn't require the `features` dictionary as an argument. \n",
     "\n",
     "The functions we use here are `plot_2d_binary_hd` and `plot_3d_binary_hd` (`hd` for high-dimensional). The `2d` function plots a 2D graph and the `3d` version plots a 3D graph like the one we saw above. In addition, you can control whether the vectors are plotted as dots or arrows using the boolean argument `arrows`.\n",
     "\n",
@@ -167,7 +165,7 @@
     "    (\"old_maid\",    [ 1, -1,  1, -1, -1,  1,  1]),\n",
     "]\n",
     "\n",
-    "plot_utils.plot_2d_binary_hd(words, arrows=True)\n",
+    "plot_utils.plot_2d_binary_hd(words, arrows=False)\n",
     "plot_utils.plot_3d_binary_hd(words, arrows=True)"
    ]
   },
