--- a/lab3-under-construction/class-assignment/lab3-class-part2.ipynb
+++ b/lab3-under-construction/class-assignment/lab3-class-part2.ipynb
@@ -25,8 +25,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append(\"../../src\")\n",
     "import plot_utils\n",
     "\n",
     "%matplotlib notebook"
@@ -38,7 +36,7 @@
    "source": [
     "### Section 2.1: Visualizing Word2Vec embeddings\n",
     "\n",
-    "First let's retrieve the embeddings we want to use. `plot_utils` offers a convenient function `get_embeddings`, which returns the embeddings and a dictionary that we call `mappings`. Run the cell below, the output and the variables `embeddings` and `mapping` are explained below."
+    "First let's retrieve the embeddings we want to use. `plot_utils` offers a convenient function `get_embeddings`, which returns the embeddings and a dictionary that we call `mappings`. Run the cell. The output and the variables `embeddings` and `mapping` are explained below."
    ]
   },
   {
@@ -85,7 +83,7 @@
     "\\end{array}\n",
     "$$\n",
     "\n",
-    "In contrast to the vectors in part 1, the features (dimensions) in these vectors don't necessarily have a clear interpretation. We cannot say that, for example, feature number 152 indicates 'adultness', or any other intuitive semantic feature. What matters is that similar words should have similar vectors.\n",
+    "In contrast to the vectors in part 1, the features (dimensions) in these vectors don't necessarily have a clear interpretation. We cannot always say that, for example, feature number 152 indicates 'adultness', or any other intuitive semantic feature. What matters is that similar words should have similar vectors.\n",
     "\n",
     "So what is the variable `mapping`? It is a dictionary of `(word, index)` pairs, a mapping from words to their their row index in the embedding matrix. For example, the first row of the matrix `embeddings` is the vector for the word \"*you*\", so the value returned by `mapping[\"you\"]` is `0`:"
    ]
@@ -158,7 +156,7 @@
    "source": [
     "---\n",
     "\n",
-    "**Ex 1.2.1** In the code cell below, analyze and visualize the embeddings for some words of you choice. Try to see if you can find patters in the output: Which word pairs/groups seem to work well and which don't? \n",
+    "**Ex 1.2.1** In the code cell below, analyze and visualize the embeddings for some words of you choice. Try to see if you can find patters in the results: Which word pairs/groups seem to work well and which don't? \n",
     "\n",
     "Use a reasonable number of words (for example 6 or more).\n",
     "\n",
@@ -199,13 +197,13 @@
     "\n",
     "In this section we will try to visualize this process.\n",
     "\n",
-    "Run the code cell below. You will see a single vector for the word *king*. Now change the function argument `minus` to `\"man\"` instead of `None`. You should two red vectors. One endpoint is labeled *man*: this is the original word embedding. You might notice that the second red vector points exactly to the opposite direction. This is the vector `-man`. If you now follow the vectors for `king` and `-man`, you will end up at the point for `king - man`.\n",
+    "Run the code cell below. You will see a single vector for the word *king*. Now change the function argument `minus` to `\"man\"` instead of `None`. You should see two red vectors. One endpoint is labeled *man*: this is the original word embedding. You might notice that the second red vector points exactly to the opposite direction. This is the vector `-man`. If you now follow the vectors for `king` and `-man`, you will end up at the point for `king - man`.\n",
     "\n",
     "Now change the argument `plus` to `\"woman\"`. You should see three new vectors: two blue and one yellow. The blue vectors are the vectors `woman` and `-woman`. The yellow vector is the final result:\n",
     "\n",
     "    king - man + woman\n",
     "    \n",
-    "You change the argument `result` to `\"queen\"`, which is what the result should intuitively be. Is the yellow vector anywhere near the point labeled *queen*?\n",
+    "Change the argument `result` to `\"queen\"`, which is what the result should intuitively be. Is the yellow vector anywhere near the point labeled *queen*?\n",
     "\n",
     "---\n",
     "\n",
