--- a/lab3-under-construction/class-assignment/lab3-class-part3.ipynb
+++ b/lab3-under-construction/class-assignment/lab3-class-part3.ipynb
@@ -10,15 +10,13 @@
     "\n",
     "---\n",
     "\n",
-    "In this part we will learn how to perform basic vector algebra in Python. The part covers things like addition, substraction, (scalar) multiplication and division. Understanding these things prepares you for the next part, in which we will learn about compositional semantics. \n",
+    "In this part we will learn how to perform basic vector algebra in Python. The part covers things like addition, subtraction, (scalar) multiplication and division. Understanding these things prepares you for the next part, in which we will learn about compositional semantics. You will also learn how to efficiently represent and manipulate vectors in Python.\n",
     "\n",
     "### Section 3.1: Vectors as Python lists\n",
     "\n",
     "Manipulating vectors in vanilla Python is slow, frustrating, and cumbersome. Let's consider the vector addition, using Python lists to represent vectors:\n",
     "\n",
     "    [1, 2, 3] + [4, 5, 6]\n",
-    "    \n",
-    "**Note:** `[1, 2, 3]` *corresponds to* $\\begin{bmatrix}1 \\\\ 2 \\\\ 3\\end{bmatrix}$ *in the common mathematical notation.*\n",
     "\n",
     "Unfortunately, running the addition above does not give us the result we are looking for. Run the code cell below to see what happens."
    ]
@@ -49,7 +47,7 @@
     "a = [1, 2, 3]\n",
     "b = [4, 5, 6]\n",
     "\n",
-    "a[0] = a[0] + b[0]\n",
+    "a[0] = a[0] + b[0] # Or a[0] += b[0]\n",
     "a[1] = a[1] + b[1]\n",
     "a[2] = a[2] + b[2]\n",
     "\n",
@@ -166,7 +164,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Ex 3.2.1** **TODO**"
+    "---\n",
+    "\n",
+    "**Ex 3.2.1** Create an array of zeros (a zero-vector) of length 5 using the function `zeros`. Change the last element to 1. Now create the same array using a Python list and and the function `np.array`.\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -203,7 +205,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see, the `+` operator no longer means 'concatenation', but gives us the result we wanted. Many other operators exhibit intuitive behavior when used with NumPy arrays. See the code cell below and make sure you understand what is happening at each line, and why the result is what it is."
+    "As you can see, the `+` operator no longer means 'concatenation', but gives us the result we wanted. Many other operators exhibit intuitive behavior when used with NumPy arrays. See the code cells below and make sure you understand what is happening at each line, and why the result is what it is.\n",
+    "\n",
+    "**1: Subtraction**"
    ]
   },
   {
@@ -218,11 +222,39 @@
     "print(\"a:\", a)\n",
     "print(\"b:\", b)\n",
     "\n",
-    "print(\"Substraction (a-b):\", a-b)                 # ==> [2-1, 1-2, 4-3]\n",
-    "\n",
+    "print(\"Subtraction (a-b):\", a-b)                 # ==> [2-1, 1-2, 4-3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**2. Element-wise multiplication and division**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(\"Element-wise multiplication (a*b):\", a*b)  # ==> [2*1, 1*2, 4*3]\n",
-    "print(\"Element-wise division (a/b):\", a/b)        # ==> [2/1, 1/2, 4/3]\n",
-    "\n",
+    "print(\"Element-wise division (a/b):\", a/b)        # ==> [2/1, 1/2, 4/3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**3. Scalar multiplication and division**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "scalar = 5\n",
     "print(\"Scalar multiplication (5*a):\", 5*a)        # ==> [5*2, 5*1, 5*4]\n",
     "print(\"Scalar division (a/5):\", a/5)              # ==> [2/5, 1/5, 4/5]"
@@ -232,7 +264,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Ex 3.3.1 TODO** Basic albegra"
+    "---\n",
+    "\n",
+    "**Ex 3.3.1** Create the following two arrays: `[3, 4, 5]`, `[1., 1., 1.]`, . Subtract the second array from the first. Now find two different arrays that give you the same result when added together.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ex 3.3.1 here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "**Ex 3.3.2** You can also perform multiple operations on vectors at the same time (on the same line), just like with numbers. Just like you can write `3 + 5*2 = 13`, you can write `a + b*c = d`, for some vectors `a`, `b`, `c`, and `d`.\n",
+    "\n",
+    "Create three arrays `v1`, `v2`, and `v3` of your own choice. The arrays should be of same length. Now add the arrays `v1` and `v2` together, and element-wise divide the result of the addition by `v3` scaled up by `2` (that is, multiplied by the scalar `2`). note that this division might restrict your choice for `v3`if you want to get sensible result.\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -246,21 +304,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Ex 3.3.2 TODO** Albegra on more than two vectors"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Ex 3.3.3 TODO** Average vectors"
+    "---\n",
+    "\n",
+    "**Ex 3.3.3** Create 5 vectors of your choice and calculate the average vector. Each element in the final vector should be an average of the elements in the same position in the original vectors.\n",
+    "\n",
+    "---"
    ]
   },
   {
