--- a/lab3-under-construction/class-assignment/lab3-class-part4.ipynb
+++ b/lab3-under-construction/class-assignment/lab3-class-part4.ipynb
@@ -36,10 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append(\"../../src\")\n",
     "import plot_utils\n",
-    "\n",
     "%matplotlib notebook\n",
     "\n",
     "embeddings, mapping = plot_utils.get_embeddings()\n",
@@ -62,7 +59,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Ex 3.1.1 TODO** Improve on baseline embedding function. "
+    "---\n",
+    "\n",
+    "**Ex 3.1.1** **This is an advanced exercise, don't worry if you can't make sense of it at all.** \n",
+    "\n",
+    "Create an alternative function for creating sentence embeddings. The function should take three arguments: `sentence`, which is the sentence to be embedded as a string; `embeddings`, a NumPy matrix (2d array) which contains the word embeddings; `mapping`, which contains the mapping from words to their row indices in `embeddings`.\n",
+    "\n",
+    "One improvement to the basic word averaging model would be to use weighted averaging, where some words contribute more to the final embedding than others. For this you will probably need some additional resources (like a frequency list for English words).\n",
+    "\n",
+    "You can test your function by supplying it to the `plot_utils.plot_sentences_Nd` functions. This can be done via an argument `embedding_fn`:\n",
+    "\n",
+    "    def some_fn(args): return 0\n",
+    "    \n",
+    "    plot_utils.plot_sentences_2d(sents, embeddings, mapping, embedding_fn=some_fn)\n",
+    "    \n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def alternative_embedding(sentence, word_embeddings, mapping):\n",
+    "    \"\"\"Creates a sentence embedding using some nice function.\"\"\"\n",
+    "    return np.zeros(100)"
    ]
   }
  ],
