fix typos, comment wa phrase embedding fn for students

--- a/lab3-under-construction/class-assignment/lab3-class-part2.ipynb
+++ b/lab3-under-construction/class-assignment/lab3-class-part2.ipynb
@@ -85,7 +85,7 @@
     "\n",
     "In contrast to the vectors in part 1, the features (dimensions) in these vectors don't necessarily have a clear interpretation. We cannot always say that, for example, feature number 152 indicates 'adultness', or any other intuitive semantic feature. What matters is that similar words should have similar vectors.\n",
     "\n",
-    "So what is the variable `mapping`? It is a dictionary of `(word, index)` pairs, a mapping from words to their their row index in the embedding matrix. For example, the first row of the matrix `embeddings` is the vector for the word \"*you*\", so the value returned by `mapping[\"you\"]` is `0`:"
+    "So what is the variable `mapping`? It is a dictionary of `(word, index)` pairs, a mapping from words to their row indices in the embedding matrix. For example, the first row of the matrix `embeddings` is the vector for the word \"*you*\", so the value returned by `mapping[\"you\"]` is `0`:"
    ]
   },
   {
@@ -120,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For now, you don't actually need to manipulate or retrieve the embeddings yourself, but it is good to know how the embeddings are handled in Python. Any manipulation of the embeddings is done by functions, to which we supply the embeddings and mappings as arguments.\n",
+    "For now, you don't actually need to manipulate or retrieve the embeddings yourself, but it is good to know how they are handled in Python. Any manipulation of the embeddings is done by functions, to which we supply the embeddings and mappings as arguments.\n",
     "\n",
     "We will again visualize the embeddings. In the code cell below we supply a list of words and illustrate the usage of two new functions `plot_w2v_2d` and `plot_w2v_3d` for plotting the W2V vectors. Notice that you need to supply the embeddings and the mapping dictionary in addition to the word list.\n",
     "\n",
@@ -160,7 +160,7 @@
     "\n",
     "Use a reasonable number of words (for example 6 or more).\n",
     "\n",
-    "All words should be lowercase. If you use the `split` method as above, the words need to be separated by whitespace. You can try out visualizing in 2D and 3D, with and without arrows, depending on which one you like.\n",
+    "All words should be lowercase. If you use the `split` method as above, the words need to be separated by whitespace. You can try out visualizing in 2D and 3D, with and without arrows, depending on which style you like.\n",
     "\n",
     "If you can't see a word in the output, you might have chosen a word that is not in the vocabulary. The vocabulary contains a bit less than 26000 frequent English words.\n",
     "\n",
@@ -199,7 +199,7 @@
     "\n",
     "Run the code cell below. You will see a single vector for the word *king*. Now change the function argument `minus` to `\"man\"` instead of `None`. You should see two red vectors. One endpoint is labeled *man*: this is the original word embedding. You might notice that the second red vector points exactly to the opposite direction. This is the vector `-man`. If you now follow the vectors for `king` and `-man`, you will end up at the point for `king - man`.\n",
     "\n",
-    "Now change the argument `plus` to `\"woman\"`. You should see three new vectors: two blue and one yellow. The blue vectors are the vectors `woman` and `-woman`. The yellow vector is the final result:\n",
+    "Now change the argument `plus` to `\"woman\"`. You should see three new vectors: two blue and one yellow. The blue vectors are both the vector for `woman`, simply starting from different points. The yellow vector is the final result:\n",
     "\n",
     "    king - man + woman\n",
     "    \n",
