--- a/lab3-under-construction/class-assignment/lab3-class-part3.ipynb
+++ b/lab3-under-construction/class-assignment/lab3-class-part3.ipynb
@@ -34,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The operator `+` concatenates the two lists. We will need to explicitly add the elements in the lists to get the correct result. Two ways of doing this are shown in the code cells below."
+    "The operator `+` concatenates the two lists. We will need to explicitly add together the elements in the lists to get the correct result. Two ways of doing this are shown in the code cells below."
    ]
   },
   {
@@ -79,7 +79,7 @@
    "source": [
     "We could define a function `add` that takes vectors as arguments and returns the result of the addition, which would be an improvement. Still, there are many things we want to do with vectors, and implementing all of them would be tiresome work. \n",
     "\n",
-    "Implementing convenient functions would also not change the fact that manipulating Python lists is prohibitively slow. When you're working with a few hundred or thousand elements in a list, you might not need to worry about performance, but implementing something like the W2V embeddings we saw in the last part, where in the training phase we need to perform billions of operations, would be practically impossible with Python lists.\n",
+    "Implementing convenient functions would also not change the fact that manipulating Python lists is often prohibitively slow. When you're working with a few hundred or thousand elements in a list, you might not need to worry about performance, but implementing something like the W2V embeddings we saw in the last part, where in the training phase we need to perform billions of operations, would be practically impossible with Python lists.\n",
     "\n",
     "Fortunately there is a standard solution to all of these problems. The solution is a high-performance scientific computing library called **NumPy**.\n",
     "\n",
@@ -104,7 +104,7 @@
     "For our purposes NumPy offer two interesting things: \n",
     "\n",
     "1. **Array:** An efficient data structure for representing vectors \n",
-    "2. **Array functions:** Efficient functions for all the basic things you want to do with vectors:\n",
+    "2. **Array functions:** Efficient functions for all the basic things you want to do with vectors\n",
     "\n",
     "**Note:** *NumPy offers much more functionality than we can go through here. To get an in-depth treatment you can see the [NumPy User Guide](https://docs.scipy.org/doc/numpy-dev/user/index.html). As always, reading this is completely optional.*\n",
     "\n",
@@ -286,9 +286,9 @@
    "source": [
     "---\n",
     "\n",
-    "**Ex 3.3.2** You can also perform multiple operations on vectors at the same time (on the same line), just like with numbers. Just like you can write `3 + 5*2 = 13`, you can write `a + b*c = d`, for some vectors `a`, `b`, `c`, and `d`.\n",
+    "**Ex 3.3.2** You can also perform multiple operations on vectors in the same expression, just like with numbers. Just like you can write `3 + 5*2 = 13`, you can write `a + b*c = d`, for some vectors `a`, `b`, `c`, and `d`.\n",
     "\n",
-    "Create three arrays `v1`, `v2`, and `v3` of your own choice. The arrays should be of same length. Now add the arrays `v1` and `v2` together, and element-wise divide the result of the addition by `v3` scaled up by `2` (that is, multiplied by the scalar `2`). note that this division might restrict your choice for `v3`if you want to get sensible result.\n",
+    "Create three arrays `v1`, `v2`, and `v3` of your own choice. The arrays should be of same length. Now add the arrays `v1` and `v2` together, and element-wise divide the result of the addition by `v3` scaled up by `2` (that is, multiplied by the scalar `2`). Note that this division might restrict your choice for `v3` if you want to get sensible result.\n",
     "\n",
     "---"
    ]
