--- a/lab3-under-construction/class-assignment/lab3-class-part4.ipynb
+++ b/lab3-under-construction/class-assignment/lab3-class-part4.ipynb
@@ -63,7 +63,7 @@
     "\n",
     "**Ex 3.1.1** **This is an advanced exercise, don't worry if you can't make sense of it at all.** \n",
     "\n",
-    "Create an alternative function for creating sentence embeddings. The function should take three arguments: `sentence`, which is the sentence to be embedded as a string; `embeddings`, a NumPy matrix (2d array) which contains the word embeddings; `mapping`, which contains the mapping from words to their row indices in `embeddings`.\n",
+    "Implement an alternative function for creating sentence embeddings. The function should take three arguments: `sentence`, which is the sentence to be embedded as a string; `embeddings`, a NumPy matrix (2d array) which contains the word embeddings; `mapping`, which contains the mapping from words to their row indices in `embeddings`.\n",
     "\n",
     "One improvement to the basic word averaging model would be to use weighted averaging, where some words contribute more to the final embedding than others. For this you will probably need some additional resources (like a frequency list for English words).\n",
     "\n",
@@ -72,6 +72,8 @@
     "    def some_fn(args): return 0\n",
     "    \n",
     "    plot_utils.plot_sentences_2d(sents, embeddings, mapping, embedding_fn=some_fn)\n",
+    "    \n",
+    "*Note: You can take a look at how the word-averaging model is implemented efficiently by navigating to a directory called `src` in the home directory (where you landed when you first opened this instance). The function is `embed_sentence` and can be found in the `plot_utils.py` file. It might also contain some hints for the weighted averaging.*\n",
     "    \n",
     "---"
    ]
