--- a/lab3-under-construction/home-assignment/lab3-home.ipynb
+++ b/lab3-under-construction/home-assignment/lab3-home.ipynb
@@ -158,7 +158,7 @@
     "M_moby_shared, M_sense_shared, mapping_shared = distribsem.create_vectors_shared(\n",
     "    max_vocab_size=10000,\n",
     "    min_dimensionality=1000,\n",
-    "    window_size=2,\n",
+    "    window_size=4,\n",
     "    text1=moby_dick,\n",
     "    text2=sense_and_sensibility\n",
     ")"
@@ -203,7 +203,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**3.2: You second task** is to pick **two** words you found in **3.1**: one with similar embeddings and one with dissimilar embeddings. Analyze the contexts of the two words in the two texts, similar to what you did in Task 2. How do the (dis)similarities of the embeddings show in the word contexts in different texts? Again, answer the question in your code. \n",
+    "**3.2: Your second task** is to pick **two** words you found in **3.1**: one with similar embeddings and one with dissimilar embeddings. Analyze the contexts of the two words in the two texts, similar to what you did in Task 2. How do the (dis)similarities of the embeddings show in the word contexts in different texts? Again, answer the question in your code. \n",
     "\n",
     "You do not need to change the window size of dimensionality in this task."
    ]
