make w2v albegra plotting nicer

--- a/lab3-under-construction/class-assignment/lab3-class-part2.ipynb
+++ b/lab3-under-construction/class-assignment/lab3-class-part2.ipynb
@@ -225,6 +225,9 @@
    },
    "outputs": [],
    "source": [
+    "import plot_utils\n",
+    "%matplotlib notebook\n",
+    "\n",
     "embeddings, mapping = plot_utils.get_embeddings()\n",
     "\n",
     "plot_utils.plot_w2v_algebra(\n",
