rename dir, add home assignment max points

--- a/lab3/home-assignment/lab3-home.ipynb
+++ b/lab3/home-assignment/lab3-home.ipynb
@@ -35,6 +35,8 @@
    "source": [
     "### Task 1\n",
     "\n",
+    "*You can get a maximum of 1 point from this task.*\n",
+    "\n",
     "In this first task you will perform basic calculations with vectors similar to what we did in the Part 3 of the class material. **Use NumPy arrays for all of the vectors in this assignment!**\n",
     "\n",
     "In the code cell below, solve the following four subtasks:\n",
@@ -85,6 +87,8 @@
    "metadata": {},
    "source": [
     "### Task 2\n",
+    "\n",
+    "*You can get a maximum of 1.5 points from this task.*\n",
     "\n",
     "Your second task is to study the contexts of different words, keeping in mind the ideas about learning word embeddings from corpora. You can read slides 18-26 from lecture 2 if you need a refresher on this. We also remind you of some basics here.\n",
     "\n",
@@ -139,6 +143,8 @@
    "metadata": {},
    "source": [
     "### Task 3\n",
+    "\n",
+    "*You can get a maximum of 1.5 points from this task.*\n",
     "\n",
     "In this third task we will continue the theme of word embeddings and contexts. This time we will study embeddings trained on two different texts. The texts we will use are the familiar *Moby Dick* (variable `moby_dick`) and *Sense and Sensibility* (variable `sense_and_sensibility`). \n",
     "\n",
