--- a/lab3/class-assignment/lab3-class-part3.ipynb
+++ b/lab3/class-assignment/lab3-class-part3.ipynb
@@ -140,7 +140,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see, the output of the prints doesn't differ at all from the regular Python lists. One thing you might notice is that the functions `ones` and `zeros` use floating point (decimal) numbers by default, so the numbers are `1.0` and `0.0` instead of `1` and `0`.\n",
+    "As you can see, the output of the prints doesn't differ at all from the regular Python lists. One thing you might notice is that the functions `ones` and `zeros` use floating point (decimal) numbers by default, so the numbers are `1.` and `0.` instead of `1` and `0`. \n",
+    "\n",
+    "*Note: `1.` and `0.` mean `1.0` and `0.0`, the zero is left out in the output.*\n",
     "\n",
     "We can also access and change elements in the arrays with the same indexing notation we learned for Python lists."
    ]
